<resources>
    <string name="app_name">NotTalk</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="toolbar_chatLists">Chats</string>
    <string name="button_login_text">Login</string>
    <string name="button_register_text">Register</string>
    <string name="user_text_hint">Username</string>
    <string name="pass_text_hint">Password</string>
    <string name="login_item_text">Login/Register</string>
    <string name="digitSomethingHint">Write something here</string>
    <string name="logout_item_text">Logout</string>
    <string name="delete_item_text">Delete user</string>
    <string name="channel_new_messages">New messages</string>
    <string name="channel_new_messages_description">All new incoming messages.</string>
    <string name="label_reply">Reply</string>
    <string name="hint_input">Type a message…</string>
    <string name="sender_you">You</string>
    <string name="PlayerTitle">Audio</string>
    <string name="PlayerArtist">from </string>
    <string name="ServiceRequestLogin">Please Log in</string>
    <string name="fgn_text">Not Talk • Application is running</string>
</resources>