<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/login_item"
        android:title="@string/login_item_text"
        app:showAsAction="never"/>
    <item
        android:id="@+id/logout_item"
        android:title="@string/logout_item_text"
        app:showAsAction="never"/>
    <item
        android:id="@+id/delete_item"
        android:title="@string/delete_item_text"
        app:showAsAction="never"/>
    <group android:id="@+id/group1">
        <item
            android:id="@+id/user_item"
            android:icon="@drawable/ic_avatar"
            android:title=""
            android:enabled="false"
            app:showAsAction="never"/>
    </group>
</menu>